<resources>
    <string name="app_name">Term and Condition</string>
    <string name="terms_heading">TERMS OF SERVICE</string>
    <string name="condition_1_heading">1. PERSONAL INFORMATION</string>
    <string name="cond_1_text">We are firmly committed to the security and protection of personal information of our Users and the Services. The Truecaller Privacy Policy describes how we collect, use, share and process personal information and You acknowledge and agree that Truecaller may collect, use, share and process personal information as described therein.</string>
    <string name="condition_2_heading">2. GRANT OF RIGHTS</string>
    <string name="cond_2_text">Except as otherwise agreed separately in writing between us or as set forth in the API License Addendum and subject to Your compliance with these Terms at all times, Truecaller grants You a personal, non-exclusive, non-transferable and limited right to use the Services for Your own personal, non-commercial use. You are not allowed to use the Truecaller Services on any device that You do not own or control. You may not copy, decompile, reverse engineer, disassemble, attempt to derive the source code of, modify, or create derivative works of the Truecaller software applications, any updates, or any part thereof (except as and only to the extent any foregoing restriction is prohibited by applicable law or to the extent expressly permitted by these Terms or may be permitted by the licensing terms governing use of any open source components included in the Truecaller software applications). You are not granted any right to use Truecaller’s name, trademarks or other commercial symbols. All rights not expressly granted to You under these Terms shall be retained by Truecaller. In case You wish to use any part of the Services as a part of Your own application or modify any part of the Services, such use is subject to Truecaller’s prior written approval and that You enter into a separate license agreement with Truecaller. Any API, commercial or enterprise use of the Services shall be governed by the API License Addendum or such other separate agreement as may be required by Truecaller.</string>
</resources>