<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/terms_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/regular_padding"
        android:text="@string/terms_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">
            <TextView
                android:id="@+id/condition_heading_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/regular_padding"
                android:text="@string/condition_1_heading" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/regular_padding">

                <TextView
                    android:id="@+id/cond_1_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/cond_1_text" />
            </ScrollView>

            <TextView
                android:id="@+id/condition_heading_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/regular_padding"
                android:text="@string/condition_2_heading" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/regular_padding">

                <TextView
                    android:id="@+id/cond_2_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/cond_2_text" />
            </ScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>